// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage should renders without crashing with not image 1`] = `
<img
  alt="Product"
  className="productImg custom-class"
  src="./coffee-mug.png"
/>
`;

exports[`ProductImage should show a component with product image 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;
